2006-12-23  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcelanguage-parser-2.c:
	Fixed parsing keyword lists: it lost keywords before
	a comment, if a comment was inside the list.
	(str_to_bool): made it take xmlChar* to avoid casts in its users code;
	(update_regex_flags): made it take xmlChar* instead of gboolean since
	all its users called str_to_bool() on the argument anyway;
	(get_regex_flags): moved getting regex options attributes from
	create_definition() to new function;
	(create_definition): the keywords fix.

2006-12-21  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/csharp.lang,
	gtksourceview/language-specs/css.lang,
	gtksourceview/language-specs/php.lang,
	gtksourceview/language-specs/sql.lang:
	Corrected broken /**/ comments.
	* gtksourceview/language-specs/scheme.lang:
	Do not use def:preprocessor style here.
	* gtksourceview/language-specs/def.lang,
	gtksourceview/language-specs/gvim.styles:
	Temporarily added back "def:preprocessor" style.
	* gtksourceview/language-specs/desktop.lang,
	gtksourceview/language-specs/m4.lang,
	gtksourceview/language-specs/sh.lang:
	Better highlighting.

2006-12-16  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/ada.lang,
	gtksourceview/language-specs/csharp.lang,
	gtksourceview/language-specs/css.lang,
	gtksourceview/language-specs/desktop.lang,
	gtksourceview/language-specs/fortran.lang,
	gtksourceview/language-specs/gtkrc.lang,
	gtksourceview/language-specs/haskell.lang,
	gtksourceview/language-specs/idl.lang,
	gtksourceview/language-specs/ini.lang,
	gtksourceview/language-specs/java.lang,
	gtksourceview/language-specs/octave.lang,
	gtksourceview/language-specs/pascal.lang,
	gtksourceview/language-specs/php.lang,
	gtksourceview/language-specs/po.lang,
	gtksourceview/language-specs/ruby.lang,
	gtksourceview/language-specs/scheme.lang,
	gtksourceview/language-specs/sql.lang,
	gtksourceview/language-specs/tcl.lang,
	gtksourceview/language-specs/texinfo.lang: