@@ -1,5 +1,13 @@
 2006-12-23  Yevgen Muntyan  <muntyan@tamu.edu>
 
+	* gtksourceview/gtksourcecontextengine.c:
+	Fixed wrong usage of extend_parent flag: code didn't take into
+	account possibility of including any context elsewhere and demanded
+	this flag to be TRUE for toplevel definition and its children.
+	Same thing for end_at_line_end.
+
+2006-12-23  Yevgen Muntyan  <muntyan@tamu.edu>
+
 	* gtksourceview/gtksourcelanguage-parser-2.c:
 	Fixed parsing keyword lists: it lost keywords before
 	a comment, if a comment was inside the list.
